<resources>
    <string name="app_name">JobSearching</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="name">Anjar Harimurti Rahadi</string>
    <string name="logout">Logout</string>
    <string name="job_title">Job Title</string>
    <string name="company_name">Company Name</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="website">Go To Website</string>
    <string name="job_specification">Job Specification</string>
    <string name="job">Job</string>
    <string name="full_time">Full-time</string>
    <string name="description">Description</string>
    <string name="job_status">Job Status</string>
    <string name="job_description">Job Description</string>
    <string name="search_hint">Search User</string>
    <string name="apply_filter">Apply Filter</string>
</resources>