<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp">

    <RelativeLayout
        android:id="@+id/rl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:background="@drawable/rounded_edittext"
            android:padding="8dp"
            android:paddingStart="12dp"
            android:layout_toStartOf="@id/iv_filter"
            app:drawableEndCompat="@drawable/baseline_search_24"
            android:drawablePadding="8dp"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/iv_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:src="@drawable/baseline_keyboard_arrow_down_24" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/rl_search"
        android:visibility="gone"
        tools:visibility="visible"
        android:background="@drawable/rounded_edittext"
        android:padding="16dp"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/tv_fulltime_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/full_time"
            android:padding="8dp"
            android:drawablePadding="8dp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_fulltime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_above="@id/et_location"/>

        <TextView
            android:id="@+id/tv_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:padding="8dp"
            android:drawablePadding="8dp"
            android:layout_below="@id/tv_fulltime_title"
            android:layout_alignParentStart="true"
            android:layout_marginTop="2dp"/>

        <EditText
            android:id="@+id/et_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_location_title"
            android:layout_below="@id/tv_fulltime_title"/>

        <Button
            android:id="@+id/btn_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/et_location"
            android:text="@string/apply_filter"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_jobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_filter"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        tools:listitem="@layout/job_item" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>